crates/solidity/testing/snapshots/bindings_output/modifiers/virtual_modifier/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected OpenBrace or Semicolon.
   ╭─[ input.sol:2:18 ]
   │
 2 │     modifier foo virtual { _; }
   │                  ───────┬───────  
   │                         ╰───────── Error occurred here.
───╯
Error: Expected OpenBrace or Semicolon.
   ╭─[ input.sol:6:18 ]
   │
 6 │ ╭─▶     modifier foo override(Base) { _; }
 7 │ ├─▶     function test() public foo {}
   │ │                                       
   │ ╰─────────────────────────────────────── Error occurred here.
───╯
[39mReferences and definitions:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ contract Base {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     modifier foo virtual { _; }
   │              ─┬─  
   │               ╰─── name: 2
   │ 
 5 │ contract Test is Base {
   │          ──┬─  
   │            ╰─── name: 3
 6 │     modifier foo override(Base) { _; }
   │              ─┬─  
   │               ╰─── name: 4
   │
   ├─[ input.sol:1:1 ]
   │
 5 │ contract Test is Base {
   │                  ──┬─  
   │                    ╰─── ref: 1
───╯
[39mDefiniens:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ ╭─▶ contract Base {
   ┆ ┆   
 3 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 1
   │
   ├─[ input.sol:1:1 ]
   │
 2 │         modifier foo virtual { _; }
   │     ────────┬───────  
   │             ╰───────── definiens: 2
   │ 
 4 │ ╭─▶ 
   ┆ ┆   
 8 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 3
   │
   ├─[ input.sol:1:1 ]
   │
 6 │     modifier foo override(Base) { _; }
   │ ────────┬───────  
   │         ╰───────── definiens: 4
───╯
